# SFMLflappybird

./: 'make  .gitignore  CMakeLists.txt  Makefile  README.md  main  notes.txt
old/: Makefile
old/src/: main.cpp
resources/: credits.txt
src/: gamefunctions.cpp  gamefunctions.hpp  main.cpp  missile.cpp  missile.hpp  pipe.cpp  pipe.hpp
